[package]
name = "minotaurs"
version = "0.1.0"
authors = ["David Teller <D.O.Teller@gmail.com>"]
description = "Rebuild the deck"

[dependencies]
clap = "*"
env_logger = "*"
itertools = "*"
log = "*"
rand = "*"
smallvec = "*"

[[bin]]
name = "simulate"
path = "src/simulate.rs"

[[bin]]
name = "generate"
path = "src/generate.rs"